<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.qfs.radixulous.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_LoadFragment"
            app:destination="@id/LoadFragment" />
        <action
            android:id="@+id/action_MainFragment_to_ConfigFragment"
            app:destination="@id/ConfigFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoadFragment"
        android:name="com.qfs.radixulous.LoadFragment"
        android:label="@string/load_fragment_label"
        tools:layout="@layout/fragment_load">

        <action
            android:id="@+id/action_LoadFragment_to_MainFragment"
            app:popUpTo="@id/MainFragment"
            app:popUpToInclusive="true"
            app:destination="@id/MainFragment" />
    </fragment>

    <fragment
        android:id="@+id/ConfigFragment"
        android:name="com.qfs.radixulous.ConfigFragment"
        android:label="@string/config_fragment_label"
        tools:layout="@layout/fragment_config">

        <action
            android:id="@+id/action_ConfigFragment_to_MainFragment"
            app:popUpTo="@id/MainFragment"
            app:popUpToInclusive="true"
            app:destination="@id/MainFragment" />
    </fragment>
</navigation>