<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnFrontNew"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/button_front"
            android:text="New Project"/>

        <TextView
            android:id="@+id/btnFrontLoad"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/button_front"
            android:text="Load Project"/>

        <TextView
            android:id="@+id/btnFrontImport"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/button_front"
            android:text="Import MIDI"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/linkLicense"
            android:theme="@style/front_text"
            android:text="@string/license_brief"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/linkSource"
            android:theme="@style/front_text"
            android:text="@string/source_code_location"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/linkSFLicense"
            android:theme="@style/front_text"
            android:text="@string/soundfont_disclaimer"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>