<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/sRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="Relative"
        android:textOff="Absolute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/llRelativePalette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sRelative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_bg"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/rbAdd"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rbSubtract"
                android:layout_marginRight="5px"
                android:onClick="change_relative_option"
                android:background="@color/interface_bg"
                android:textColor="@color/interface_fg"
                android:text="@string/pfx_add"/>

            <TextView
                android:id="@+id/rbSubtract"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/rbAdd"
                app:layout_constraintEnd_toStartOf="@+id/rbPow"
                android:layout_marginRight="5px"
                android:onClick="change_relative_option"
                android:background="@color/interface_bg"
                android:textColor="@color/interface_fg"
                android:text="@string/pfx_subtract" />


            <TextView
                android:id="@+id/rbPow"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/rbSubtract"
                app:layout_constraintEnd_toStartOf="@+id/rbLog"
                android:layout_marginRight="5px"
                android:text="@string/pfx_log"
                android:onClick="change_relative_option"
                android:background="@color/interface_bg"
                android:textColor="@color/interface_fg"
                />
            <TextView
                android:id="@+id/rbLog"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/rbPow"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/interface_bg"
                android:textColor="@color/interface_fg"
                android:onClick="change_relative_option"

                android:text="@string/pfx_pow" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tlNumberLineRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgRelOptions"
            android:stretchColumns="*">
            <TableRow android:id="@+id/rowRel" />
        </TableLayout>

        <SeekBar
            android:id="@+id/sbRelativeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNumberLineRel"
            android:max="11"
            android:min="0"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/llAbsolutePalette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRelativePalette" >

        <SeekBar
            android:id="@+id/sbOctave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:max="11"
            android:min="0"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TableLayout
            android:id="@+id/clNumberLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sbOctave"
            android:stretchColumns="*">
            <TableRow android:id="@+id/row" />
        </TableLayout>

        <SeekBar
            android:id="@+id/sbOffset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clNumberLine"
            android:max="11"
            android:min="0"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/clButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llAbsolutePalette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/table_bg"
        android:padding="5px"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnSplit"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/interface_bg"
            android:textColor="@color/interface_fg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Split"
            android:layout_marginRight="5px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnUnset"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/interface_bg"
            android:textColor="@color/interface_fg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5px"
            android:layout_height="match_parent"
            android:text="Unset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnInsert"
            app:layout_constraintStart_toEndOf="@+id/btnSplit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnInsert"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/interface_bg"
            android:textColor="@color/interface_fg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5px"
            android:layout_height="match_parent"
            android:text="Insert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRemove"
            app:layout_constraintStart_toEndOf="@+id/btnUnset"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnRemove"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/interface_bg"
            android:textColor="@color/interface_fg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>